# desktop_memory_viz

./: Cargo.toml  README.md  extract_snapshot.py
src/: main.rs
