[package]
name = "desktop-memory-viz"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ureq = "3"

[profile.release]
opt-level = 3
lto = true
